--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.8",
+    "use-debounce": "^9.0.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
